--- a/Marathons/Marathons/MainWindow.xaml
+++ b/Marathons/Marathons/MainWindow.xaml
@@ -6,16 +6,15 @@
         xmlns:local="clr-namespace:Marathons"
         mc:Ignorable="d"
         Title="MainWindow" Height="471.4" Width="798.2">
-    <Grid><Image x:Name="ImajeSkill" Margin="10,6,554,333.6" Source="1, 3, 5, 7, 9, 11, 13 варианты.png" Stretch="Fill"/>
-            <Label x:Name="LableTitle" Content="Управление волонтерами" HorizontalAlignment="Left" Margin="295,30,0,0" VerticalAlignment="Top" FontSize="21" FontFamily="Open Sans Light" FontWeight="Bold" FontStyle="Italic" Background="{x:Null}" Foreground="#FF00903E"/>
+    <Grid>
         <Grid HorizontalAlignment="Left" Height="342" Margin="0,100,0,-0.4" VerticalAlignment="Top" Width="792" Background="#FFFDC100">
-            <DataGrid x:Name="DataGridVolonter" HorizontalAlignment="Left" Height="217" Margin="30,125,0,0" VerticalAlignment="Top" Width="715"/>
+            <DataGrid x:Name="DataGridVolonter" HorizontalAlignment="Left" Height="217" Margin="30,125,0,0" VerticalAlignment="Top" Width="715" FontFamily="Open Sans Light"/>
             
             <Label Content="Сортировка и фильтрация" HorizontalAlignment="Left" Margin="11,20,0,0" VerticalAlignment="Top" FontSize="18" FontFamily="Open Sans Light"/>
             <Label Content="Сортировать по:" HorizontalAlignment="Left" Margin="10,52,0,0" VerticalAlignment="Top" FontSize="18" FontFamily="Open Sans Light"/>
             <Label Content="Загрузка" HorizontalAlignment="Left" Margin="553,20,0,0" VerticalAlignment="Top" FontSize="18" FontFamily="Open Sans Light"/>
-            <Button x:Name="ButtonVolonterZ" Content="Загрузка волонтеров" HorizontalAlignment="Left" Margin="495,52,0,0" VerticalAlignment="Top" Width="214" FontSize="18" Height="32" Background="#FFEBEBEB"/>
-            <ComboBox x:Name="ComboBoxFiltr" HorizontalAlignment="Left" Margin="185,52,0,0" VerticalAlignment="Top" Width="140" Height="32" Foreground="White">
+            <Button x:Name="ButtonVolonterZ" Content="Загрузка волонтеров" HorizontalAlignment="Left" Margin="495,52,0,0" VerticalAlignment="Top" Width="214" FontSize="18" Height="32" Background="#FFEBEBEB" FontFamily="Open Sans Light"/>
+            <ComboBox x:Name="ComboBoxFiltr" HorizontalAlignment="Left" Margin="185,52,0,0" VerticalAlignment="Top" Width="140" Height="32" Foreground="White" FontFamily="Open Sans Light">
                 <ComboBox.Background>
                     <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
                         <GradientStop Color="#FFF0F0F0" Offset="0"/>
@@ -24,7 +23,11 @@
                 </ComboBox.Background>
                 <ComboBoxItem Content="Фамилии"/>
             </ComboBox>
-            <Button x:Name="ButtonUp" Content="Обновить" HorizontalAlignment="Left" Margin="185,89,0,0" VerticalAlignment="Top" Width="90" FontSize="18" Height="32" Background="#FFEBEBEB"/>
+            <Button x:Name="ButtonUp" Content="Обновить" HorizontalAlignment="Left" Margin="185,89,0,0" VerticalAlignment="Top" Width="90" FontSize="18" Height="32" Background="#FFEBEBEB" FontFamily="Open Sans Light"/>
+        </Grid>
+        <Grid HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="792" Background="#FF00903E">
+            <Image x:Name="ImajeSkill" Margin="0,0,557,0" Source="1, 3, 5, 7, 9, 11, 13 варианты.png" Stretch="Fill"/>
+            <Label x:Name="LableTitle" Content="Управление волонтерами" HorizontalAlignment="Left" Margin="295,30,0,0" VerticalAlignment="Top" FontSize="21" FontFamily="Open Sans Light" FontWeight="Bold" FontStyle="Italic" Background="{x:Null}" Foreground="#FF241D70"/>
         </Grid>
     </Grid>
 </Window>
